# scl

./: .gitignore  LICENSE  README.md
c-lang/: README.md
c-lang/include/: scl_parser.h
c-lang/src/: scl_lexer.c  scl_parser.c  scl_value.c
docs/: api-docs.md
elixir/scl_parser/: README.md  mix.exs
elixir/scl_parser/lib/: scl_parser.ex
elixir/scl_parser/lib/scl/: errors.ex  serializer.ex
elixir/scl_parser/lib/scl/parser/: core.ex  lexer.ex  tokens.ex
elixir/scl_parser/test/: scl_parser_test.exs  test_helper.exs
elixir/scl_parser/test/fixtures/: sample.scl
go/: README.md  errors.go  go.mod  lexer.go  parser.go  scl.go  serializer.go  tokens.go
lib/: README.md  pyproject.toml  setup.py
lib/scl_parser/: __init__.py  api.py  document.py  errors.py  lexer.py  parser.py  parser_core.py  parser_with_comments.py  serializer.py  tokens.py
package/: README.md  pyproject.toml
package/src/scl/: __init__.py  doc.py  errors.py  native.py  opts.py  scl.py  value.py
package/src/scl/native/: sources.txt
python/: MANIFEST.in  README.md  pyproject.toml  setup.py
python/scl_parser/: __init__.py  api.py  errors.py  lexer.py  parser.py  parser_core.py  serializer.py  tokens.py
ruby/: README.md  scl_parser.gemspec
ruby/lib/: scl_parser.rb
ruby/lib/scl/: errors.rb  lexer.rb  parser.rb  serializer.rb
ruby/test/: scl_parser_test.rb  test_helper.rb
ruby/test/fixtures/: sample.scl
rust/: Cargo.toml  README.md
rust/src/: errors.rs  lexer.rs  lib.rs  parser.rs  serializer.rs  tokens.rs
