[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structcfg-parser"
version = "1.1.0"
description = "Parser for Structured Configuration Language (SCL)"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "shareui" }
]
keywords = ["parser", "configuration", "scl", "config", "structured-config"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
"Homepage" = "https://gitlab.com/shareui/scl"
"Bug Reports" = "https://discord.com/users/1367967801125376143"
"Source" = "https://gitlab.com/shareui/scl"

[tool.setuptools]
packages = ["scl_parser"]